tests/ui/unknown_field.stderr
error: `unknown_field::Foo` has no field `c`
   --> unknown_field.ina:10:29
    |
 LL |     let a = Foo { a: &a, c: 20 };
    |                             ^^

error: `unknown_field::Foo` has no field `c`
   --> unknown_field.ina:11:13
    |
 LL |     let b = a.c;
    |             ^

